[package]
name = "motif-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "fixtures"]

[dependencies]
entity = { path = "entity" }
apalis = { version = "0.3.4", features = ["redis", "extensions", "cron", "retry"] }
async-graphql = { version = "4.0.14", features = ["uuid", "chrono", "dataloader"] }
async-graphql-axum = "4.0.14"
async-stream = "0.3.3"
async-trait = "0.1.57"
axum = { version = "0.5.16", features = ["json"] }
axum-server = { version = "0.4.1", features = ["tls-rustls"] }
chrono = "0.4.1"
chrono-tz = "0.6.3"
dotenvy = "0.15"
env_logger = "0.9.1"
fred = { version = "5.2.0", features = ["subscriber-client"] }
futures = "0.3.24"
futures-util = "0.3.24"
jsonwebtoken = "8.1.1"
log = "0.4.17"
oauth2 = "4.2.3"
openidconnect = { git = "https://github.com/ramosbugs/openidconnect-rs", features = ["accept-string-booleans"] }
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
sea-orm = { version = "0.10.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = "1.0.145"
serde_json = "1.0.85"
serde_with = { version = "2.0.1", features = ["json"] }
serde-xml-rs = "0.6.0"
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
uuid = "1.1.2"